--- a/q/274092.html
+++ b/q/274092.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>028</td><td>JavaScript V8</td><td>240713T224123Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274151#274151">Andrew B</a></td></tr>
-<tr d-ix="1"><td>030</td><td>Retina</td><td>240713T185622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274145#274145">Neil</a></td></tr>
-<tr d-ix="2"><td>014</td><td>Desmos</td><td>240713T160252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274143#274143">Aiden Ch</a></td></tr>
-<tr d-ix="3"><td>005</td><td>J</td><td>240712T014603Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274110#274110">noodle p</a></td></tr>
-<tr d-ix="4"><td>032</td><td>Java</td><td>240712T023659Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274112#274112">Unmitiga</a></td></tr>
-<tr d-ix="5"><td>012</td><td>Julia 1.0</td><td>240712T205413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274137#274137">Ashlin H</a></td></tr>
-<tr d-ix="6"><td>002</td><td>Japt mx</td><td>240712T205301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274136#274136">Shaggy</a></td></tr>
+<tr d-ix="0"><td>002</td><td>Japt mx</td><td>240712T205301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274136#274136">Shaggy</a></td></tr>
+<tr d-ix="1"><td>028</td><td>JavaScript V8</td><td>240713T224123Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274151#274151">Andrew B</a></td></tr>
+<tr d-ix="2"><td>030</td><td>Retina</td><td>240713T185622Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274145#274145">Neil</a></td></tr>
+<tr d-ix="3"><td>014</td><td>Desmos</td><td>240713T160252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274143#274143">Aiden Ch</a></td></tr>
+<tr d-ix="4"><td>005</td><td>J</td><td>240712T014603Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274110#274110">noodle p</a></td></tr>
+<tr d-ix="5"><td>032</td><td>Java</td><td>240712T023659Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274112#274112">Unmitiga</a></td></tr>
+<tr d-ix="6"><td>012</td><td>Julia 1.0</td><td>240712T205413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274137#274137">Ashlin H</a></td></tr>
 <tr d-ix="7"><td>023</td><td>min</td><td>240712T200619Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274135#274135">chunes</a></td></tr>
 <tr d-ix="8"><td>009</td><td>Juby</td><td>240712T193339Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274134#274134">noodle p</a></td></tr>
 <tr d-ix="9"><td>002</td><td>Pyt</td><td>240712T131558Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274129#274129">Kip the </a></td></tr>
@@ -63,13 +63,22 @@
 <tr d-ix="34"><td>007</td><td>APL+WIN</td><td>240711T200539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274096#274096">Graham</a></td></tr>
 <tr d-ix="35"><td>003</td><td>Jelly</td><td>240711T193202Z</td><td><a href="https://codegolf.stackexchange.com/questions/274092/calculate-sum-of-self-exponentation/274095#274095">Fmbalbue</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 28 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-mx</code></a>, 2 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>pU
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LW14&amp;code=cFU&amp;input=WzQgNiA3XQ" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>       :Implicit map of each U in the input array
+pU     :Raise U to the power of U
+       :Implicit output of sum of resulting array
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 28 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.reduce((a,c)=&gt;a+c**c,0)
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNEts/ifZvu/wtauQq8oNaU0OVVDI1EnWdPWLlE7WUsrWcdA839yfl5xfk6qXk5@ukaaRrSJjpmOeaym5n8A" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 30 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language" rel="nofollow noreferrer">Retina</a>, 30 bytes</h1>
 <pre><code>~[&quot;L$`^¶$.(&quot;|&quot;&quot;L$`.+
 *$($&amp;$*)_
 </code></pre>
@@ -94,13 +103,13 @@ $.(4*4*4*4*_6*6*6*6*6*6*_7*7*7*7*7*7*7*_
 </code></pre>
 <p>(The <code>K</code> command doesn't perform calculations so <code>L$`^</code> is the easiest way.)</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 14 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 14 bytes</h1>
 <pre><code>f(l)=l^l.total
 </code></pre>
 <p><a href="https://www.desmos.com/calculator/tlcvraomns" rel="nofollow noreferrer">Try It On Desmos!</a></p>
 <p><a href="https://www.desmos.com/calculator/qlwee12lrw" rel="nofollow noreferrer">Try It On Desmos! - Prettified</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 5 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 5 bytes</h1>
 <pre><code>1#.^~
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmux1FBZL64Owl6nyZWanJGvkKZgomCmYA4RXLAAQgMA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -109,25 +118,20 @@ $.(4*4*4*4*_6*6*6*6*6*6*_7*7*7*7*7*7*7*_
 <p>This is because <code>#.</code> in J doesn't care whether the digits it is given are greater than the base itself - it just treats them as any other digit, multiplying them by their place value, and summing the results. In this &quot;base-1&quot;, the place value is always 1, so this is equivalent to just summing the array.</p>
 <p>Thanks to Conor for showing me this trick, saving a byte over the more trivial <code>+/@:</code> I had earlier.</p>
 </div>
-<div id="pu4" class="pu"><h1>Java, 32 bytes</h1>
+<div id="pu5" class="pu"><h1>Java, 32 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>l-&gt;l.map(x-&gt;Math.pow(x,x)).sum()
 </code></pre>
 <p><a href="https://tio.run/##ZU09b8JADN3zKzzeSYkn1A4pmRBbJkbUwYSEXrgv5Xw0CPHbw1ECQupb7Ge/j55OVPT746SMdwNDnzhGVhq7aBtWzuJ6Xsrsnybw0JLBlYs73W7@SJn5RFQDjaYQoCZl4ZJBwnwPTJzGyak9mPQVyafsYfsNNByCnMV3PIu/3vNzeLAKuuWki0qjIS/GoqqJf9C7XzHmo5QYohFyekaVr9DNOXBr0EVGn3pZW9Ehea/P4r0GXScWOXzk8CmlfNiv2XW6AQ" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Saved 17 bytes thanks to <a href="https://codegolf.stackexchange.com/users/52210">Kevin Cruijssen</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 12 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 12 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>~x=sum(x.^x)
 </code></pre>
 <p><a href="https://tio.run/##yyrNyUw0rPj/v67Ctrg0V6NCL65C879DcUZ@uUJdtImOmY557H8A" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 <p>This solution showcases how operations in Julia can be <a href="https://docs.julialang.org/en/v1/manual/mathematical-operations/#man-dot-operators" rel="nofollow noreferrer">vectorized with a dot</a>. I've redefined a single-character operator, but an anonymous function <code>x-&gt;sum(x.^x)</code> could also be used for the same score.</p>
 <p>By the way, <code>sum</code> can accept a subfunction to be called on each element before summation. For example, if <code>A</code> is a vector, <code>sum(sqrt.(x))</code> can be shortened to <code>sum(sqrt,x)</code>. It's not helpful in this case, since there's no unary definition for <code>^</code>, but this method has been useful for most of my solutions involving <code>sum</code>, often saving bytes over solutions involving <code>count</code>.</p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-mx</code></a>, 2 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>pU
-</code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LW14&amp;code=cFU&amp;input=WzQgNiA3XQ" rel="nofollow noreferrer">Try it here</a></p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://min-lang.org/" rel="nofollow noreferrer">min</a>, 23 bytes</h1>
 <pre><code>((dup pow ceil)map sum)
