--- a/q/274161.html
+++ b/q/274161.html
@@ -26,19 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
-<tr d-ix="1"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
-<tr d-ix="2"><td>010</td><td>05AB1E</td><td>240715T075322Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274173#274173">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>016</td><td>Charcoal</td><td>240715T074624Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274172#274172">Neil</a></td></tr>
-<tr d-ix="4"><td>030</td><td>R</td><td>240715T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274170#274170">pajonk</a></td></tr>
-<tr d-ix="5"><td>006</td><td>Jelly</td><td>240715T015528Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274167#274167">Jonathan</a></td></tr>
-<tr d-ix="6"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
-<tr d-ix="7"><td>006</td><td>Nekomata + e</td><td>240715T020807Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274168#274168">alephalp</a></td></tr>
-<tr d-ix="8"><td>041</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
-<tr d-ix="9"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
-<tr d-ix="10"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
+<tr d-ix="0"><td>119</td><td>Go</td><td>240715T140006Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274179#274179">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
+<tr d-ix="2"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
+<tr d-ix="3"><td>010</td><td>05AB1E</td><td>240715T075322Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274173#274173">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>016</td><td>Charcoal</td><td>240715T074624Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274172#274172">Neil</a></td></tr>
+<tr d-ix="5"><td>030</td><td>R</td><td>240715T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274170#274170">pajonk</a></td></tr>
+<tr d-ix="6"><td>006</td><td>Jelly</td><td>240715T015528Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274167#274167">Jonathan</a></td></tr>
+<tr d-ix="7"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
+<tr d-ix="8"><td>006</td><td>Nekomata + e</td><td>240715T020807Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274168#274168">alephalp</a></td></tr>
+<tr d-ix="9"><td>041</td><td>JavaScript Node.js</td><td>240715T010237Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274165#274165">l4m2</a></td></tr>
+<tr d-ix="10"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
+<tr d-ix="11"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 119 bytes</h1>
+<pre class="lang-go prettyprint-override"><code>import.&quot;slices&quot;
+func f(l[]int)bool{for i:=1;i&lt;len(l);i++{if p,e:=l[:i],l[i];e&gt;Min(p)&amp;&amp;e&lt;Max(p){return 0&gt;1}}
+return 0&lt;1}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=bVLbSsNAEAUf9yvGQEtC19LYC9I0BUEfK6J9q0Vi2C2L201ItrWy5Et8KYI_4Z_o17gXW2vbh2ySOefMnNmZt_dZtv7Mk_Q5mRGYJ0wgxOZ5VsimR-fS-1hIenbx9bKJlZylpPQQXYgUqM8nUyZk8JRlXNGsANaPw4gNOBE-DyLWaChGIcekH_NJn00xn7BpRIYjJvw8qNfJYJSs9JcqiFwUAlrDsKrQ5mcQVq7890kkX3MCYyhlsUglKCZysKUjIKscTP0KOVOmBz8AhWQJ_Vizxgopy1VhhbWeVHgbwHCOoY2hs490bFiDh5qWDm6ffdTksrquRjH0juftWkrvSPau1Xcspb05e45-xL3xWGGa8PK_h_BYfNvTtrM9QriDuks5zOAMuja7fwR9-7eFpnDhe3Ec348v78b67QXIrMUjlmYWRSL0kum5KJSkNkJ92dSzDJBeE9k0ozyNwWAKbDrqe7UlxEPQp19bBg_Cw2Al2NCwEwVQaQO79eH65gpc_d8dWq_d-wc" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Uses the fact (pointed out by <a href="https://codegolf.stackexchange.com/a/274175/77309">@akamayu</a>) that each element must be either the minimum or the maximum of it and all elements before it.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
 <pre><code>{&amp;/(x=|\x)|x=&amp;\x}
 </code></pre>
 <p>Every element must be the minimal (or the maximal) element of its prefix.</p>
@@ -49,7 +58,7 @@
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=03jUtcj2UU/Ho94GzUcdy/UedayAiHQBRQA&amp;f=S1Mw5EpTMFQwUjBWMAGyTIC0EUTMAI6APKAsUNwUqNIMqsoUyDcDqzQF8k2ApDEYm4HEubge9U191DbB0OBR7xZ1XXUusCVAo8FGGYJpiFVw66BsmDNMwfJAmgsA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
 <p>Returns a Boolean value.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?0:a=v)|(v&lt;m?0:m=v))
@@ -69,7 +78,7 @@ a.every(m =       // m = upper bound, initially NaN'ish
 )                 // end of every()
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ηε{DyθÚÊ}P
 </code></pre>
 <p>-1 byte porting <a href="https://codegolf.stackexchange.com/a/274167/52210"><em>@JonathanAllan</em>'s Jelly answer</a></p>
@@ -105,7 +114,7 @@ a.every(m =       // m = upper bound, initially NaN'ish
          # (after which this is output implicitly as result)
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 16 bytes</h1>
 <pre><code>⬤θ№⟦⌊…θ⊕κ⌈…θ⊕κ⟧ι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMxJ0ejUEfBOb8UyIn2zczLzC3N1XCuTM5Jdc7ILwDJeeYlF6XmpuaVpKZoZGtqauoo@CZWEFYWq6OQCaSs//@PjjbVUTABIyDDGEaa6SgYAcnY2P@6ZTkA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the deque can be sorted, nothing if not. Explanation: Port of JonathanAllan's Jelly answer.</p>
@@ -127,7 +136,7 @@ a.every(m =       // m = upper bound, initially NaN'ish
                     Implicitly print
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 30 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 30 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(x,`!`=cummin)any(x-!x&amp;x+!-x)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhb7YjQqdBIUE2yTS3NzM_M0E_MqNSp0FSvUKrQVdSs0IYpu_lcKCQp1VeJK00jWMNTUhNA6CkY6CsY6CiZQARMwDygGV2EAZMMxVBCkAazKFCioo2CGotkULGOGMMIUrNoELGMMI80gqoBKlNwcfYJh7oJYj7DGEMGDOw3NgUhiqB6B2Atxq6kmNBgWLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -137,7 +146,7 @@ a.every(m =       // m = upper bound, initially NaN'ish
 <pre class="lang-r prettyprint-override"><code>\(x)any(x-cummin(x)&amp;(-x)-cummin(-x))
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 7 </s> 6 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 7 </s> 6 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṢƤtƑ&quot;ḋ
 </code></pre>
 <p>A monadic Link that accepts a list of positive integers and yields <code>0</code> (falsey) if sortable or a positive integer (truthy) if not.</p>
@@ -153,13 +162,13 @@ a.every(m =       // m = upper bound, initially NaN'ish
      ḋ - dot-product with {A}
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda l:min(l)&lt;l.pop()&lt;max(l)or l and f(l)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TU9LDoIwEN1zilm2CRiQTwyBkyCLGmhsUtqGoNGzuCExeg6vwW0cWkQWbee9eW_e9PE29-Gs1fjk5fF1GXhwmAJeStadGgYy74QikhZyZ7QhtOjYDaHuQQJTDXAEi4lwZAUIBdq0ioQ098D0Qg1E6QGF7ZVJIihd9OP0qaLaqyIf9j7EPiQIElshtp0Q3_UgMYtsN0XCh2w1pJbNnC21qsSy8e_OnMLlzRFuXOSqNXYTvsH_5dxst0dau498AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Returns flipped truth values: False for sortable and True for not sortable. Consumes the input list.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 6 bytes</h1>
 <pre><code>pƆᵗ≤ᵗ≥
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FusLjrU93Dr9UecSMLl0SXFScjFUbsHNA9GGsVzRhjoKRjoKxjoKJkCOCZgF5INlDIA0HAMFQIrAsqZAAR0FM7gGU7CoGUSbKViVCVjUGEaaQVRA7ANZATHOEMKCW4tkORIf4TiI2RB3mMZCPAIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -171,7 +180,7 @@ p       Find a prefix of the input
     ᵗ≥  Check that the last is greater than at least one element of the rest
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 41 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;!x.some(p=q=t=&gt;t&lt;x[0]?p&lt;(p=t):q&gt;(q=t))
 </code></pre>
@@ -184,7 +193,7 @@ p       Find a prefix of the input
 <p><a href="https://tio.run/##TU/LDoIwELzzFfW2jbWIUA4aMHwHIaGpFDVACRDCwX/HPiJy2O3M7uzO9s1nPorh1U@nTj2qdZUJ5IJQSpfCZI6TVNwlLEQ4@jHYICLw9cDpqNoKei1KQSQ9xutNqgEypCQqvTwodBB0ISgkKNIkskhz2znrdwtdMCLbZbpAULwNMFuN3RizqshWw1@OncL5GQu3LnBos92Z7/j/OLfb3cEKr6Qtn8QTfHr0a4w9obpRNRVtVA0ZQRKqmTeQYf3vLw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Raw parse of question</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>«\ż»\Œpi
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///Q6pijew7tjjk6qSDz/@F2zcj//6OjDWN1uKINdRSMdBSMdRRMQDwTMBMoAJEzADLgGCQCUgeWNwWK6CiYIfSYgoXNoDpNwepMwMLGMNIMogRqK8geqJGGUCbcdmQ3IAkguRJiAcQ5prGxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -207,7 +216,7 @@ p       Find a prefix of the input
        ⁼    Is this result equal to the input?
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>ɖ∵?ɖ∴ZΠ$ḟ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiyZbiiLU/yZbiiLRazqAk4bifIiwiIiwiWzQsIDMsIDIsIDMsIDIsIDFdXG5bNSwgNCwgNCwgNSwgMywgNSwgMywgNiwgMiwgNl1cbls0LCAzLCA1LCAyLCA2LCAxXVxuWzEwLDEwLDEwLDEwXVxuWzQsIDUsIDQsIDMsIDQsIDVdIl0=" rel="noreferrer">Try it Online!</a> Port of Unrelated String's Jelly answer, and a bit of a mess. I tried writing my own answer, but it was a byte longer.</p>
