--- a/q/274161.html
+++ b/q/274161.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>K ngn/k</td><td>240716T042010Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274192#274192">Bubbler</a></td></tr>
-<tr d-ix="1"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
-<tr d-ix="2"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
-<tr d-ix="3"><td>023</td><td>Haskell + hgl</td><td>240715T190715Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274184#274184">Wheat Wi</a></td></tr>
-<tr d-ix="4"><td>1365</td><td>Nibbles</td><td>240715T154437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274180#274180">Dominic </a></td></tr>
-<tr d-ix="5"><td>119</td><td>Go</td><td>240715T140006Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274179#274179">bigyihsu</a></td></tr>
-<tr d-ix="6"><td>040</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
+<tr d-ix="0"><td>039</td><td>JavaScript ES6</td><td>240715T072756Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274171#274171">Arnauld</a></td></tr>
+<tr d-ix="1"><td>013</td><td>K ngn/k</td><td>240716T042010Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274192#274192">Bubbler</a></td></tr>
+<tr d-ix="2"><td>017</td><td>K ngn/k</td><td>240715T083943Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274175#274175">akamayu</a></td></tr>
+<tr d-ix="3"><td>045</td><td>Python</td><td>240715T021848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274169#274169">Albert.L</a></td></tr>
+<tr d-ix="4"><td>023</td><td>Haskell + hgl</td><td>240715T190715Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274184#274184">Wheat Wi</a></td></tr>
+<tr d-ix="5"><td>1365</td><td>Nibbles</td><td>240715T154437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274180#274180">Dominic </a></td></tr>
+<tr d-ix="6"><td>119</td><td>Go</td><td>240715T140006Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274179#274179">bigyihsu</a></td></tr>
 <tr d-ix="7"><td>010</td><td>05AB1E</td><td>240715T075322Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274173#274173">Kevin Cr</a></td></tr>
 <tr d-ix="8"><td>016</td><td>Charcoal</td><td>240715T074624Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274172#274172">Neil</a></td></tr>
 <tr d-ix="9"><td>030</td><td>R</td><td>240715T062626Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274170#274170">pajonk</a></td></tr>
@@ -42,7 +42,29 @@
 <tr d-ix="13"><td>008</td><td>Jelly</td><td>240715T003800Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274162#274162">Unrelate</a></td></tr>
 <tr d-ix="14"><td>009</td><td>Vyxal</td><td>240715T005148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274161/sorting-with-a-deque/274163#274163">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 13 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 39 bytes</h1>
+<p>Returns a Boolean value.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?v:a=v)&lt;m?v==a:m=v)
+</code></pre>
+<p><a href="https://tio.run/##fZC7DoMgGIX3PgVxgoSaWsXBFt36BN2sA7H2FpVGLYlPTxFSYxNwgOE/3/kv58UE68vu@R62Lb9W8kYloynzK1F1I2yooCkUKctEwqhAxyYTlLJE1ZEsedvzuvJrfodefu4@w2MsPHTYLIUbzIMCWYoY7DEIMYhsaqQlBdi9OyXMz0ZMfbWfKAKD2D2DaCx2TCK6T6Sx8PfHxqL5P4N3afMTq3t7CuYkx7aBQ5qDWItjAawEam4xyZCJkV8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>a =&gt;        // a[] = input array, re-used as the lower bound
+a.every(m = // m = upper bound, initially NaN'ish
+  v =&gt;      // for each value v in a[]:
+  ( v &gt; a ? //   if v is greater than the lower bound:
+      v     //     use v directly
+    :       //   else:
+      a = v //     update the lower bound to v
+  ) &lt; m ?   //   if v is lower than the upper bound:
+    a == v  //     success if the lower bound is equal to v
+            //     failure otherwise (v is between the 2 bounds)
+  :         //   else:
+    m = v   //     update the upper bound to v (truthy)
+)           // end of every()
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 13 bytes</h1>
 <pre><code>&amp;/|/=/&amp;\'\-:\
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJw9TTkOwCAM23lF1IEuRRAgDEiV+hCGTryij69JoVEuO5Hdq/WPP71te3O1GdOvg9GYIiXK2DJmJOUCrQTCFbwQU5lfAlz0U3DLwEmrDN7coW4Osak6NFWDdX4ev8/cl/9QG27yAm/AIHg=" rel="nofollow noreferrer">Try it online!</a></p>
@@ -62,7 +84,7 @@
 &amp;/               reduce by min
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 17 bytes</h1>
 <pre><code>{&amp;/(x=|\x)|x=&amp;\x}
 </code></pre>
 <p>Every element must be the minimal (or the maximal) element of its prefix.</p>
@@ -85,13 +107,13 @@
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_1__ZiDihpAgL-KGp-KGpeKKgyg94p-cXOKGpyk94p-cXOKGpQoKZiBbMV0KZiBbMSAyIDMgNF0KZiBbNCAzIDIgMV0KZiBbMTAgMTAgMTAgMTBdCmYgWzMgNCAyIDUgMSA2XQpmIFs0IDMgNSAyIDYgMV0KZiBbNSA0IDQgNSAzIDUgMyA2IDIgNl0KIi0tLS0tLSIKZiBbMSAzIDJdCmYgWzMgMSAyXQpmIFs0IDMgMiAzIDIgMV0KZiBbMSAyIDMgMiAzIDRdCmYgWzQgNSA0IDMgNCA1XQo%3D" rel="nofollow noreferrer">Try it on Uiua pad! (14 bytes)</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 45 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>f=lambda l:min(l)&lt;l.pop()&lt;max(l)or l and f(l)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TU9LDoIwEN1zilm2CRiQTwyBkyCLGmhsUtqGoNGzuCExeg6vwW0cWkQWbee9eW_e9PE29-Gs1fjk5fF1GXhwmAJeStadGgYy74QikhZyZ7QhtOjYDaHuQQJTDXAEi4lwZAUIBdq0ioQ098D0Qg1E6QGF7ZVJIihd9OP0qaLaqyIf9j7EPiQIElshtp0Q3_UgMYtsN0XCh2w1pJbNnC21qsSy8e_OnMLlzRFuXOSqNXYTvsH_5dxst0dau498AQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Returns flipped truth values: Falsey (empty list) for sortable and True for not sortable. Consumes the input list.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 23 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 23 bytes</h1>
 <pre><code>no uq&lt;f'[gj,mx,mn]&lt;&lt;pxn
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZY_LCoJAFIb3PsVpVcEJ8pqJPkA79yIh6JTljJcUfJc2bqJn6FHc9yAdtSwJZhj-7__PZa73Y3A5R0nStLOYZ2lRQl4FScziKAS3iJIqjKS34d6qkq3MB3NEClVus7l3OCGvkQvftrNaDH775EEswIEwlQD4HhZZATawJSkADzzZB8sCbydKv0dICBVUURu1RkpB-euv8XNGRnnK6CijManTiRo_tTrlNKJqf43O_ZlLcyYdu360y8g2aOIW_xx_-GvTDO8L" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -128,7 +150,7 @@
 <li>I implemented <code>jzW</code> to zip and concat lists. I chose to generalize this to any <em>monad</em>, however we can see in the above that it would have been useful to have generalized to a <em>monoid</em>. I'll leave the existing version, but I should make a version which zips and then uses a monoid action to combine the values.</li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 13 nibbles (6.5 bytes)</h1>
+<div id="pu5" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 13 nibbles (6.5 bytes)</h1>
 <pre><code>?`*!`\$[`\@]:
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708LzMpKSe1eMGCpaUlaboWa-0TtBQTYlSiE2IcYq0gYlCpm0rRStGmOgomYARkGMNIMx0FIyAZqxQLVQoA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -143,33 +165,13 @@
                 #     (=cumulative maximum)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 119 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, 119 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;slices&quot;
 func f(l[]int)bool{for i:=1;i&lt;len(l);i++{if p,e:=l[:i],l[i];e&gt;Min(p)&amp;&amp;e&lt;Max(p){return 0&gt;1}}
 return 0&lt;1}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=bVLbSsNAEAUf9yvGQEtC19LYC9I0BUEfK6J9q0Vi2C2L201ItrWy5Et8KYI_4Z_o17gXW2vbh2ySOefMnNmZt_dZtv7Mk_Q5mRGYJ0wgxOZ5VsimR-fS-1hIenbx9bKJlZylpPQQXYgUqM8nUyZk8JRlXNGsANaPw4gNOBE-DyLWaChGIcekH_NJn00xn7BpRIYjJvw8qNfJYJSs9JcqiFwUAlrDsKrQ5mcQVq7890kkX3MCYyhlsUglKCZysKUjIKscTP0KOVOmBz8AhWQJ_Vizxgopy1VhhbWeVHgbwHCOoY2hs490bFiDh5qWDm6ffdTksrquRjH0juftWkrvSPau1Xcspb05e45-xL3xWGGa8PK_h_BYfNvTtrM9QriDuks5zOAMuja7fwR9-7eFpnDhe3Ec348v78b67QXIrMUjlmYWRSL0kum5KJSkNkJ92dSzDJBeE9k0ozyNwWAKbDrqe7UlxEPQp19bBg_Cw2Al2NCwEwVQaQO79eH65gpc_d8dWq_d-wc" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Uses the fact (pointed out by <a href="https://codegolf.stackexchange.com/a/274175/77309">@akamayu</a>) that each element must be either the minimum or the maximum of it and all elements before it.</p>
-</div>
-<div id="pu6" class="pu"><h1>JavaScript (ES6), 40 bytes</h1>
-<p>Returns a Boolean value.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;a.every(m=v=&gt;(v&gt;a?0:a=v)|(v&lt;m?0:m=v))
-</code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/Z9m@z/R1i5RL7UstahSI9e2zNZOo8wu0d7AKtG2TLNGo8wmF8gGimtq/k/OzyvOz0nVy8lP11CKDikqLcmojFXStOZClkjTiDaM1cQiqKNgpKNgrKNggk3WBCwFVIBdrwFQAo6xqQCZC9ZvClSho2CG2w5TsDIzHDaZgs0xASszhpFmEC1g9SgalGLyot0Sc4qxhwLESzhca4hDCh4Q@IIDSQGeAIX4BRIypiA1/wE" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<h3>Commented</h3>
-<pre class="lang-javascript prettyprint-override"><code>a =&gt;              // a[] = input array, re-used as the lower bound
-a.every(m =       // m = upper bound, initially NaN'ish
-  v =&gt;            // for each value v in a[]:
-  (v &gt; a ? 0      //   do nothing if v is greater than the lower bound (falsy)
-         : a = v) //   otherwise, update the lower bound to v (truthy)
-  |               //
-  (v &lt; m ? 0      //   do nothing if v is lower than the upper bound (falsy)
-         : m = v) //   otherwise, update the upper bound to v (truthy)
-                  //   -&gt; this fails if neither the lower nor the upper bound
-                  //      has been updated, meaning v is in between
-)                 // end of every()
-</code></pre>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 10 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ηε{DyθÚÊ}P
