--- a/q/44946.html
+++ b/q/44946.html
@@ -26,21 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>157</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
+<tr d-ix="0"><td>151</td><td>Python 3</td><td>240716T082401Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274193#274193">Jitse</a></td></tr>
 <tr d-ix="1"><td>229</td><td>Python3</td><td>240715T223722Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/274186#274186">Ajax1234</a></td></tr>
 <tr d-ix="2"><td>154</td><td>Python 2</td><td>150126T063449Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44952#44952">Sp3000</a></td></tr>
 <tr d-ix="3"><td>196</td><td>Haskell</td><td>150126T045305Z</td><td><a href="https://codegolf.stackexchange.com/questions/44946/trucks-in-a-parking-lot/44948#44948">MtnViewM</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 157 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 151 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>_,t,l=map(int,input().split())
-*q,d=input(),'.'
-for s in q:
- c=s.count;x=t==c(d*l)&gt;exit(c(d)-q[0].count(d))
- while~x:q+=[s[:x]+d+s[x+1:]];x=q[-1].find('#',x)
+q=[(input(),0)]
+for s,n in q:
+ c=s.count;x=t==c('.'*l)&gt;exit(n)
+ while~x:z=s[:x]+'.'+s[x+1:];q+=[(z,n+1)];x=z.find('#',x)
 </code></pre>
-<p><a href="https://tio.run/##LUxLDsIgFNxzChIWFKEvVtNNDV6EEGP6SUmQFqERN14daXQ288nMrO84L@6c801EYeXjvlbGRWHcusWKQVitKczQwYtB/lNBgaJpeeKAjcO@Q7iXAfplc/GSZJSyr4aDZdcxlW3RrPbqqH@F4hjCr9nY8ZM6z6UKqkuaDzyoxJtO63LhVd1omIwbKkqoSCznpsUn3CIgsIMA2QFf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Full program, outputs via exit code</p>
+<p><a href="https://tio.run/##LYzRCsIgGIXvfQrBCzVFWtGNw15kSMTamGD/XDqyXfTq5qDv5sA5fCd80jTDuZSbTNKb5z0wB0k6CGtiXMXgXU2OFtOxfymP3KJxfuEoATvAi0a4N1H18wqpzSYZ0zOq6MHz65CrDhzh9@T88M16M7HT2Yq6i9hl0WjbLqKebxJEw231NzU6eDBKqMy8lOaCT/iCFFE7RJEd9QM" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Full program, outputs via <a href="https://codegolf.meta.stackexchange.com/a/5330/87681">exit code</a></p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 229 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>from itertools import*
